# aircraft_game

./: CMakeLists-linux.txt  CMakeLists.txt  main.cpp
lib/: structs.h
lib/BMPLoader/: BMPLoader.cpp  BMPLoader.h
lib/callbacks/: Close.cpp  Display.cpp  Idle.cpp  ReSize.cpp  Setup.cpp  callbacks.cpp  callbacks.h  dbg.cpp  keyboard.cpp
lib/gameEngine/: gameEngine.cpp  gameEngine.h
lib/glModel/: glModel.cpp  glModel.h
lib/glTerrain/: glTerrain.cpp  glTerrain.h
lib/randRange/: randRange.h
resources/models/: flap.mtl  propeler.mtl  tailpiece.mtl
